IO操作改为使用虚拟线程